Fix tabs alignment for horizontal tabs with grow

--- a/frontend/src/metabase/ui/components/navigation/Tabs/Tab.module.css
+++ b/frontend/src/metabase/ui/components/navigation/Tabs/Tab.module.css
@@ -8,6 +8,12 @@
   [data-orientation="vertical"] {
     padding: 0.6875rem 0.9375rem 0.6875rem 0.5rem;
   }
+
+  &[data-grow="true"][data-orientation="horizontal"] {
+    .tabLabel {
+      text-align: center;
+    }
+  }
 }
 
 .tab {
